# openapi2locust

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
examples/: petstore.yaml
src/openapi2locust/: __init__.py  auth_handler.py  cli.py  config.py  data_faker.py  generator.py  parser.py
src/openapi2locust/templates/: locustfile.py.j2
tests/: test_auth_handler.py  test_cli.py  test_data_faker.py  test_generator.py  test_parser.py
